--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
                             </div>
                             <div class="detail-row">
                                 <span class="detail-label">Hesap Sahibi</span>
-                                <div class="detail-value" id="enpara_tl_holder">CLB YAZILIM DANIŞMANLIK TİC. LTD. ŞTİ.
+                                <div class="detail-value" id="enpara_tl_holder">CLB YAZILIM DANIŞMANLIK TİCARET LİMİTED ŞİRKETİ
                                 </div>
                                 <div class="button-group">
                                     <button class="copy-btn-small"
@@ -955,7 +955,7 @@
                             </div>
                             <div class="detail-row">
                                 <span class="detail-label">Hesap Sahibi</span>
-                                <div class="detail-value" id="vakifbank_tl_holder">CLB YAZILIM DANIŞMANLIK TİC. LTD.
+                                <div class="detail-value" id="vakifbank_tl_holder">CLB YAZILIM DANIŞMANLIK TİCARET LİMİTED ŞİRKETİ
                                     ŞTİ.</div>
                                 <div class="button-group">
                                     <button class="copy-btn-small"
@@ -1060,7 +1060,7 @@
                             </div>
                             <div class="detail-row">
                                 <span class="detail-label">Hesap Sahibi</span>
-                                <div class="detail-value" id="qnb_tl_holder">CLB YAZILIM DANIŞMANLIK TİC. LTD. ŞTİ.
+                                <div class="detail-value" id="qnb_tl_holder">CLB YAZILIM DANIŞMANLIK TİCARET LİMİTED ŞİRKETİ
                                 </div>
                                 <div class="button-group">
                                     <button class="copy-btn-small"
@@ -1165,7 +1165,7 @@
                             </div>
                             <div class="detail-row">
                                 <span class="detail-label">Hesap Sahibi</span>
-                                <div class="detail-value" id="isbank_tl_holder">CLB YAZILIM DANIŞMANLIK TİC. LTD. ŞTİ.
+                                <div class="detail-value" id="isbank_tl_holder">CLB YAZILIM DANIŞMANLIK TİCARET LİMİTED ŞİRKETİ
                                 </div>
                                 <div class="button-group">
                                     <button class="copy-btn-small"
