--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
             background: #f8fafc;
             padding: 24px 32px;
             border-top: 1px solid #e2e8f0;
+            padding: 0px 15px;
         }
 
         .contact-grid {
