--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             font-size: 11px;
             color: #1e293b;
             background: #f1f5f9;
-            padding: 6px 10px;
+            padding: 6px;
             border-radius: 4px;
             border: 1px solid #e2e8f0;
             word-break: break-all;
@@ -956,8 +956,7 @@
                             </div>
                             <div class="detail-row">
                                 <span class="detail-label">Hesap Sahibi</span>
-                                <div class="detail-value" id="vakifbank_tl_holder">CLB YAZILIM DANIŞMANLIK TİCARET LİMİTED ŞİRKETİ
-                                    ŞTİ.</div>
+                                <div class="detail-value" id="vakifbank_tl_holder">CLB YAZILIM DANIŞMANLIK TİCARET LİMİTED ŞİRKETİ</div>
                                 <div class="button-group">
                                     <button class="copy-btn-small"
                                         onclick="copyToClipboard('vakifbank_tl_holder', this)">Kopyala</button>
